--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<iframe src="resource_1.htl" frameborder="0"></iframe>
+<iframe src="access/point/index.html" frameborder="0"></iframe>
 
 
 
